Fix left alignment for first tab

--- a/styles/tabs.less
+++ b/styles/tabs.less
@@ -32,7 +32,7 @@
     line-height: @tab-height;
     color: @text-color;
     padding-left: 0;
-    margin-left: 15px;
+    margin-left: 10px;
     border-top-right-radius: @tab-radius;
     box-shadow: inset -1px -1px 1px rgba(0,0,0, .05);
     transition: color .1s ease-in;
@@ -47,7 +47,7 @@
       content: '';
       position: absolute;
       top: 0;
-      left: -18px;
+      left: -12px;
       height: @tab-height;
       width: 40px;
       border-top-left-radius: @tab-radius;
